@@ -90,6 +90,7 @@ struct Song
     bool isUnknown() const;
     bool fixVariousArtists();
     bool revertVariousArtists();
+    bool setAlbumArtist();
     static QString capitalize(const QString &s);
     bool capitalise();
     bool isStream() const { return /*file.isEmpty() || */file.contains("://"); }
