@@ -1,6 +1,7 @@
 ﻿X.X.X
 -----
 1. Give tooltips to view actions.
+2. Add 'Set Album Artist from Artist' action to tag editor.
 
 0.9.0
 -----
